--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "amfe-flexible": "^2.2.1",
     "cube-ui": "~1.12.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "vue-style-loader": "^3.1.2"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -53,7 +52,7 @@
     "url-loader": "^0.5.8",
     "vue-cli-plugin-cube-ui": "^0.2.4",
     "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.1",
+    "vue-style-loader": "^3.1.2",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
